--- a/ShelterMap/app/src/main/res/values/strings.xml
+++ b/ShelterMap/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ShelterMap</string>
     <string name="title_activity_account">Account</string>
+    <string name="title_activity_shelter">ShelterActivity</string>
 </resources>
