--- a/ShelterMap/app/src/main/res/values/strings.xml
+++ b/ShelterMap/app/src/main/res/values/strings.xml
@@ -7,4 +7,13 @@
     <string name="already_account">Already have an account?</string>
     <string name="terms_of_service">By using Shelter Mapp, you agree to our \n Terms of Use and Privacy Policy.</string>
     <string name="title_activity_account">Account</string>
+
+    <string name="register">Registration</string>
+    <string name="email">Email Address</string>
+    <string name="phone">Phone Number</string>
+    <string name="name">Full Name</string>
+    <string name="password">Password</string>
+
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
 </resources>
