--- a/ShelterMap/app/src/main/res/values/strings.xml
+++ b/ShelterMap/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 
     <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
+
+    <string name="logout">Log Out</string>
 </resources>
